--- a/src/assets/css/LoginRegister.css
+++ b/src/assets/css/LoginRegister.css
@@ -44,11 +44,63 @@ form .input-box {
 }
 
 
+
+
 .input-box input::placeholder {
     color: #fff;
 }
 
 .input-box .icon {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    translate: 0 -50%;
+    font-size: 30px;
+}
+
+/*Pruebas contenedor Reporte*/
+form .input-box1 {
+    position: relative;
+    width: 90%;
+    height: 30px;
+    margin: 10px 0;
+    background: transparent;
+}
+
+.input-box1 input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    outline: none;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 0 5px 0 20px;
+}
+
+.input-box1 textarea {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    outline: none;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #ffffff;
+    padding: 0 5px 0 20px;
+}
+
+
+.input-box1 input::placeholder {
+    color: #fff;
+}
+
+.input-box1 textarea::placeholder {
+    color: #fff;
+}
+
+.input-box1 .icon {
     position: absolute;
     right: 20px;
     top: 50%;
