--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -310,7 +310,7 @@ body {
 
 h2 {
   text-align: center;
-  color: #3785e5;
+  color: #ffffff;
   font-size: 3rem;
   margin-bottom: 1.5rem;
 }
@@ -365,27 +365,44 @@ h2 {
 }
 
 /* Contenedor general para organizar el mapa y el sidebar */
-.layout-container {
-  display: flex;
+.parent {
+  display: grid;
+  padding: 40px 50px 0 50px;
   grid-area: content;
-  padding: 0 1.5rem;
-  height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
+  grid-template-columns: 1fr 1fr;  /* Dos columnas iguales */
+  grid-template-rows: 1fr 0.5fr;     /* Dos filas iguales */
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 82vh;  /* Asegurar que ocupe toda la altura de la ventana */
 }
 
-/* Contenedor del mapa */
-.map-container {
-  flex: 70%; /* El mapa ocupa el 70% del ancho */
-  height: 100%; /* Asegura que ocupe toda la altura */
+.div1 {
+  grid-area: 1 / 1 / 3 / 2;  /* Ocupar toda la primera columna (2 filas) */
 }
 
-/* Contenedor del sidebar */
-.sidebar-container {
-  flex: 30%; /* El recuadro de información ocupa el 30% */
-  background-color: #f4f4f4;
-  padding: 20px;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1); /* Sombra para destacar el panel */
-  overflow-y: auto; /* Para manejar contenido largo */
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;  /* Ocupar la primera fila de la segunda columna */
+  font-size: 1.5rem; /* Aumenta el tamaño de la fuente */
+  font-weight: bold; /* Hacer el texto más grueso, opcional */
+  color: #f0f0f0; /* Cambia el color del texto si es necesario */
+  padding: 20px; /* Aumentar el espacio alrededor del texto */
 }
+
+.div3 {
+  grid-area: 2 / 2 / 3 / 3;  /* Ocupar la segunda fila de la segunda columna */
+}
+
+.div1, .div2, .div3 {
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  /* Sombras para hacer que luzcan más visualmente separados */
+}
+
+.div2, .div3 {
+  background: transparent;
+  backdrop-filter: blur(10px);  /* Color de fondo para los paneles */
+
+}
+
 
 /*Aside Sidebar*/
 .layout__aside{
@@ -410,5 +427,62 @@ h2 {
   margin-right: 1rem;
 }
 
+
+/* Report Alerta */
+/* Styles for alert card */
+.alerta-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; /* Espacia los elementos, con la imagen alineada a la derecha */
+  align-items: center; /* Centrar verticalmente */
+}
+
+.alerta-imagen {
+  margin-left: 20px; /* Espacio entre el texto y la imagen */
+  width: 200px;
+  height: 200px;
+}
+
+
+/* Styles for alert navigation buttons */
+.alerta-navigation button {
+  padding: 8px 12px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007BFF;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.alerta-navigation button:hover {
+  background-color: #0056b3;
+}
+
+.alerta-navigation button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+/* Form styles */
+.report-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.submit-btn {
+  padding: 10px;
+  background-color: #3793f6;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+  background-color: #103370;
+}
 
 
